# apple-inventory-check

./: README.md  pyproject.toml
.github/workflows/: main.yml
src/apple_stock_query/: __main__.py  checker.py
